--- a/overview/features.html
+++ b/overview/features.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CodeIgniter Features : CodeIgniter User Guide</title>
+<title>Recursos Suportados : Guia do Usuário CodeIgniter</title>
+<link rel="icon" type="image/png" href="../images/ci-icon.png" />
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -17,7 +18,7 @@
 <meta http-equiv= 'pragma' content='no-cache' />
 <meta name='robots' content='all' />
 <meta name='author' content='ExpressionEngine Dev Team' />
-<meta name='description' content='CodeIgniter User Guide' />
+<meta name='description' content='Guia do Usuário CodeIgniter' />
 
 </head>
 <body>
@@ -28,8 +29,8 @@
 <div id="masthead">
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
-<td><h1>CodeIgniter User Guide Version 2.2.2</h1></td>
-<td id="breadcrumb_right"><a href="../toc.html">Table of Contents Page</a></td>
+<td><h1>Guia do Usuário CodeIgniter Versão 2.2.2</h1></td>
+<td id="breadcrumb_right"><a href="../toc.html">Índice de Páginas</a></td>
 </tr>
 </table>
 </div>
@@ -40,11 +41,11 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
 <td id="breadcrumb">
-<a href="http://codeigniter.com/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
-<a href="../index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
-Features
+<a href="http://codeigniter.com/">CodeIgniter</a> &nbsp;&#8250;&nbsp;
+<a href="../index.html">Home do Guia do Usuário</a> &nbsp;&#8250;&nbsp;
+Recursos Suportados
 </td>
-<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Pesquisar no Guia do Usuário&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Pesquisar" /></form></td>
 </tr>
 </table>
 <!-- END BREADCRUMB -->
@@ -56,44 +57,40 @@ Features
 <div id="content">
 
 
-<h1>CodeIgniter Features</h1>
+<h1>Recursos Suportados</h1>
 
-<p>Features in and of themselves are a very poor way to judge an application since they tell you nothing
-about the user experience, or how intuitively or intelligently it is designed.  Features
-don't reveal anything about the quality of the code, or the performance, or the attention to detail, or security practices.
-The only way to really judge an app is to try it and get to know the code. <a href="../installation/">Installing</a>
-CodeIgniter is child's play so we encourage you to do just that.  In the mean time here's a list of CodeIgniter's main features.</p>
+<p>Recursos por si só são um jeito pobre de se julgar uma aplicação pois eles nada lhe dizem sobre a experiência do usuário, ou se foram projetados de forma intuitiva e inteligível. Os recursos não revelam nada sobre a qualidade de seu código, ou sua performance, ou sua atenção ao detalhe, ou práticas de segurança. O único jeito de realmente julgar uma aplicação é testá-la e conhecer melhor seu código. <a href="../installation/">Instalar</a> o CodeIgniter é brincadeira de criança e por isso lhe aconselhamos a fazê-lo. Neste meio tempo, aqui está uma lista de seus principais recursos:</p>
 
 <ul>
-<li>Model-View-Controller Based System</li>
-<li>Extremely Light Weight</li>
-<li>Full Featured database classes with support for several platforms.</li>
-<li>Active Record Database Support</li>
-<li>Form and Data Validation</li>
-<li>Security and XSS Filtering</li>
-<li>Session Management</li>
-<li>Email Sending Class. Supports Attachments, HTML/Text email, multiple protocols (sendmail, SMTP, and Mail) and more.</li>
-<li>Image Manipulation Library (cropping, resizing, rotating, etc.).  Supports GD, ImageMagick, and NetPBM</li>
-<li>File Uploading Class</li>
-<li>FTP Class</li>
-<li>Localization</li>
-<li>Pagination</li>
-<li>Data Encryption</li>
+<li>Sistema Baseado em Modelo-Visão-Controlador</li>
+<li>Extremamente Leve</li>
+<li>Classes de banco de dados completas com suporte a várias plataformas.</li>
+<li>Suporte a Active Record Database</li>
+<li>Validação de Formulários e Dados</li>
+<li>Segurança e Filtragem XSS</li>
+<li>Gerenciamenteo de Sessão.</li>
+<li>Classe de envio de e-mail. Suporte a Anexox, formatação HTML / Texto Puro, múltiplos protocolos (sendmail, SMTP, and Mail) e mais.</li>
+<li>Biblioteca de Manipulação de Imagens (recorte, redimensionamento, rotação etc.). Suporte a GD, ImageMagick e NetPBM.</li>
+<li>Classe Upload de Arquivos</li>
+<li>Classes FTP</li>
+<li>Localização</li>
+<li>Paginação</li>
+<li>Encriptação de Dados</li>
 <li>Benchmarking</li>
-<li>Full Page Caching</li>
-<li>Error Logging</li>
-<li>Application Profiling</li>
-<li>Calendaring Class</li>
-<li>User Agent Class</li>
-<li>Zip Encoding Class</li>
-<li>Template Engine Class</li>
-<li>Trackback Class</li>
-<li>XML-RPC Library</li>
-<li>Unit Testing Class</li>
-<li>Search-engine Friendly URLs</li>
-<li>Flexible URI Routing</li>
-<li>Support for Hooks and Class Extensions</li>
-<li>Large library of "helper" functions</li>
+<li>Cache completo da página</li>
+<li>Log de Erros</li>
+<li>Perfis de Aplicação</li>
+<li>Classe Calendário</li>
+<li>Classe Agente de Usuário</li>
+<li>Classe Codificação Zip</li>
+<li>Classe Interpletadora de Template</li>
+<li>Classe Trackback</li>
+<li>Classe XML-RPC</li>
+<li>Classe de Teste de Unidade</li>
+<li>URLs amigáveis aos motores de busca</li>
+<li>Roteamento URI Flexível</li>
+<li>Suporte a Ganchos, Extensões de Classe e Plugins.</li>
+<li>Grande biblioteca de funções auxiliares "Helpers"</li>
 </ul>
 
 
@@ -105,11 +102,11 @@ CodeIgniter is child's play so we encourage you to do just that.  In the mean ti
 
 <div id="footer">
 <p>
-Previous Topic:&nbsp;&nbsp;<a href="cheatsheets.html">CodeIgniter Cheatsheets</a>
+Tópico Anterior:&nbsp;&nbsp;<a href="cheatsheets.html">Referências Rápidas</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="../index.html">User Guide Home</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-Next Topic:&nbsp;&nbsp;<a href="appflow.html">Application Flow Chart</a>
+<a href="#top">Topo da Página</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+<a href="../index.html">Home do Guia do Usuário</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+Próximo Tópico:&nbsp;&nbsp;<a href="appflow.html">Fluxograma da Aplicação</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2014 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a> &nbsp;&middot;&nbsp; Copyright &#169; 2014 - 2015 &nbsp;&middot;&nbsp; <a href="http://bcit.ca/">British Columbia Institute of Technology</a></p>
 </div>
