--- a/toc.html
+++ b/toc.html
@@ -79,7 +79,7 @@
 	<li><a href="./installation/troubleshooting.html">Resolvendo Problemas</a></li>
 </ul>
 
-<h3>Introdução</h3>
+<a href="./overview/index.html"><h3>Introdução</h3></a>
 <ul>
 	<li><a href="./overview/getting_started.html">Primeiros Passos</a></li>
 	<li><a href="./overview/at_a_glance.html">Visão Geral do CodeIgniter</a></li>
