--- a/index.html
+++ b/index.html
@@ -88,8 +88,17 @@
 <p><a href="#top">Topo da Página</a></p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2014 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a> &nbsp;&middot;&nbsp; Copyright &#169; 2014 - 2015 &nbsp;&middot;&nbsp; <a href="http://bcit.ca/">British Columbia Institute of Technology</a></p>
 </div>
-
-
-
 </body>
+<script type="application/ld+json">
+{ "@context" : "http://schema.org",
+  "@type" : "SoftwareSourceCode",
+  "name" : "CodeIgniter",
+  "url" : "http://codeigniter.com/",
+  "codeRepository" : "http://codeigniter.com/",
+  "programmingLanguage" : "PHP",
+  "license" : "MIT License ",
+  "codeRepository" : "https://github.com/bcit-ci/CodeIgniter",
+  "about" : "CodeIgniter é um Framework de Desenvolvimento de Aplicações - um conjunto de ferramentas - para quem constrói sites usando PHP. Seu objetivo é que você possa desenvolver projetos muito mais rápido do que você poderia se estivesse escrevendo código a partir do zero, fornecendo um rico conjunto de bibliotecas para as tarefas mais comuns, bem como uma interface simples e estrutura lógica para acessar essas bibliotecas. CodeIgniter permite que você mantenha o foco em seu projeto minimizando a quantidade de código necessário para uma dada tarefa."
+ }
+</script>
 </html>
