--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CodeIgniter Features : CodeIgniter User Guide</title>
+<title>Tutorial : Guia do Usuário CodeIgniter</title>
+<link rel="icon" type="image/png" href="../images/ci-icon.png" />
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -17,19 +18,19 @@
 <meta http-equiv= 'pragma' content='no-cache' />
 <meta name='robots' content='all' />
 <meta name='author' content='ExpressionEngine Dev Team' />
-<meta name='description' content='CodeIgniter User Guide' />
+<meta name='description' content='Guia do Usuário CodeIgniter' />
 
 </head>
 <body>
 
 <!-- START NAVIGATION -->
 <div id="nav"><div id="nav_inner"><script type="text/javascript">create_menu('../');</script></div></div>
-<div id="nav2"><a name="top"></a><a href="javascript:void(0);" onclick="myHeight.toggle();"><img src="../images/nav_toggle_darker.jpg" width="154" height="43" border="0" title="Toggle Table of Contents" alt="Toggle Table of Contents" /></a></div>
+<div id="nav2"><a name="top"></a><a href="javascript:void(0);" onclick="myHeight.toggle();"><img src="../images/nav_toggle_darker.jpg" width="154" height="43" border="0" title="Mostrar Tabela de Conteúdos" alt="Tabela de Conteúdos" /></a></div>
 <div id="masthead">
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
-<td><h1>CodeIgniter User Guide Version 2.2.2</h1></td>
-<td id="breadcrumb_right"><a href="../toc.html">Table of Contents Page</a></td>
+<td><h1>Guia do Usuário CodeIgniter Versão 2.2.2</h1></td>
+<td id="breadcrumb_right"><a href="../toc.html">Índice de Páginas</a></td>
 </tr>
 </table>
 </div>
@@ -40,12 +41,12 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
 <td id="breadcrumb">
-<a href="http://codeigniter.com/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
-<a href="../index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
+<a href="http://codeigniter.com/">CodeIgniter</a> &nbsp;&#8250;&nbsp;
+<a href="../index.html">Home do Guia do Usuário</a> &nbsp;&#8250;&nbsp;
 <a href="index.html">Tutorial</a> &nbsp;&#8250;&nbsp;
-Introduction
+Introdução
 </td>
-<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Pesquisar no Guia do Usuário&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Pesquisar" /></form></td>
 </tr>
 </table>
 <!-- END BREADCRUMB -->
@@ -57,30 +58,30 @@ Introduction
 <div id="content">
 
 
-<h1>Tutorial &minus; Introduction</h1>
+<h1>Tutorial &minus; Introdução</h1>
 
-<p>This tutorial is intended to introduce you to the CodeIgniter framework and the basic principles of MVC architecture. It will show you how a basic CodeIgniter application is constructed in step-by-step fashion.</p>
+<p>Este tutorial destina-se a apresentá-lo ao framework CodeIgniter e aos princípios básicos da arquitetura MVC. Ele irá mostrar a você como uma aplicação básica é construída passo-a-passo com o CodeIgniter.</p>
 
-<p>In this tutorial, you will be creating a <strong>basic news application</strong>. You will begin by writing the code that can load static pages. Next, you will create a news section that reads news items from a database. Finally, you'll add a form to create news items in the database.</p>
+<p>Neste tutorial, você estará criando uma <strong>aplicação básica de notícias</strong>. Você vai começar escrevendo um código para carregar páginas estáticas. Em seguida, você irá criar uma seção de notícias que lê as notícias a partir de um banco de dados. Por último, você vai criar um formulário para adicionar novas notícias no banco de dados.</p>
 
-<p>This tutorial will primarily focus on:</p>
+<p>Este tutorial irá focar-se essencialmente em:</p>
 <ul>
-<li>Model-View-Controller basics</li>
-<li>Routing basics</li>
-<li>Form validation</li>
-<li>Performing basic database queries using &quot;Active Record&quot;</li>
+<li>Princípios básicos do MVC</li>
+<li>Princípios básicos do roteamento</li>
+<li>Validação de formulário</li>
+<li>Executar consultas básicas em banco de dados usando &quot;Active Record&quot;</li>
 </ul>
 
-<p>The entire tutorial is split up over several pages, each explaining a small part of the functionality of the CodeIgniter framework. You'll go through the following pages:</p>
+<p>Todo o tutorial é dividido em várias páginas, cada uma explicando uma pequena parte das funcionalidades do framework CodeIgniter. Você vai passar pelas páginas a seguir:</p>
 <ul>
-<li>Introduction, this page, which gives you an overview of what to expect.</li>
-<li><a href="static_pages.html">Static pages</a>, which will teach you the basics of controllers, views and routing.</li>
-<li><a href="news_section.html">News section</a>, where you'll start using models and will be doing some basic database operations.</li>
-<li><a href="create_news_items.html">Create news items</a>, which will introduce more advanced database operations and form validation.</li>
-<li><a href="conclusion.html">Conclusion</a>, which will give you some pointers on further reading and other resources.</li>
+<li>Introdução, esta página aqui, traz uma visão geral do que vem pela frente.</li>
+<li><a href="static_pages.html">Páginas Estáticas</a>, que vai te ensinar o básico de controllers, views e routeamento.</li>
+<li><a href="news_section.html">Seção de Notícias</a>, onde você vai começar a usar models e vai fazer algumas operações básicas em banco de dados.</li>
+<li><a href="create_news_items.html">Criar Notícias</a>, que irá introduzir operações de banco de dados mais avançadas e validação de formulário.</li>
+<li><a href="conclusion.html">Conclusão</a>, o que lhe dará algumas indicações sobre leitura adicional e outros recursos.</li>
 </ul>
 
-<p>Enjoy your exploration of the CodeIgniter framework.</p>
+<p>Aproveite a sua exploração no framework CodeIgniter.</p>
 
 </div>
 <!-- END CONTENT -->
@@ -88,11 +89,11 @@ Introduction
 
 <div id="footer">
 <p>
-Previous Topic:&nbsp;&nbsp;<a href="../overview/goals.html">Goals</a>
+Tópico Anterior:&nbsp;&nbsp;<a href="../overview/goals.html">Objetivos da Arquitetura</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="../index.html">User Guide Home</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-Next Topic:&nbsp;&nbsp;<a href="static_pages.html">Static pages</a>
+<a href="#top">Topo da Página</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+<a href="../index.html">Home do Guia do Usuário</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+Próximo Tópico:&nbsp;&nbsp;<a href="static_pages.html">Páginas Estáticas</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2014 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a> &nbsp;&middot;&nbsp; Copyright &#169; 2014 - 2015 &nbsp;&middot;&nbsp; <a href="http://bcit.ca/">British Columbia Institute of Technology</a></p>
 </div>
