--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -75,7 +75,7 @@ Introdução
 <p>Todo o tutorial é dividido em várias páginas, cada uma explicando uma pequena parte das funcionalidades do framework CodeIgniter. Você vai passar pelas páginas a seguir:</p>
 <ul>
 <li>Introdução, esta página aqui, traz uma visão geral do que vem pela frente.</li>
-<li><a href="static_pages.html">Páginas Estáticas</a>, que vai te ensinar o básico de controllers, views e routeamento.</li>
+<li><a href="static_pages.html">Páginas Estáticas</a>, que vai te ensinar o básico de controllers, views e roteamento.</li>
 <li><a href="news_section.html">Seção de Notícias</a>, onde você vai começar a usar models e vai fazer algumas operações básicas em banco de dados.</li>
 <li><a href="create_news_items.html">Criar Notícias</a>, que irá introduzir operações de banco de dados mais avançadas e validação de formulário.</li>
 <li><a href="conclusion.html">Conclusão</a>, o que lhe dará algumas indicações sobre leitura adicional e outros recursos.</li>
